# personal-trainer

./: .gitignore  README.md  pyproject.toml
personal_trainer/: __init__.py  label_mapper.py  text_classifier.py
tests/: test_multi_label_text_classifier.py  test_text_classifier.py
